<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pet_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="presentation.pet.PetFragment">

        <EditText
            android:id="@+id/pet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/pet_name"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pet_image"
            tools:text="name" />

        <ImageView
            android:id="@+id/pet_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/pet_image"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[5]" />

        <TextView
            android:id="@+id/pet_touch_image_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/touch_to_choose_an_image"
            app:layout_constraintEnd_toEndOf="@+id/pet_image"
            app:layout_constraintStart_toStartOf="@+id/pet_image"
            app:layout_constraintTop_toBottomOf="@+id/pet_image" />

        <ImageView
            android:id="@+id/pet_found_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/white_ball"
            android:contentDescription="@string/pet_rescued"
            android:src="@drawable/ic_rescued"
            app:layout_constraintEnd_toEndOf="@+id/pet_image"
            app:layout_constraintTop_toTopOf="@+id/pet_image" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/last_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pet_name" />

        <Button
            android:id="@+id/pet_location_pin"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_map"
            android:src="@drawable/ic_map"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/on"
            app:layout_constraintBaseline_toBaselineOf="@+id/pet_location_pin"
            app:layout_constraintStart_toEndOf="@+id/pet_location_pin" />

        <TextView
            android:id="@+id/pet_location_date"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/never"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            tools:text="2019 Apr. 12" />

        <CheckBox
            android:id="@+id/pet_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/found"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pet_location_pin" />

        <EditText
            android:id="@+id/pet_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="top"
            android:hint="@string/pet_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pet_found"
            tools:text="@tools:sample/lorem/random" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
